# OpenIdiom

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  TODO-workflow-setup.md  idea
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/ai/: commands.rs  context.rs  cost.rs  embedder.rs  mod.rs  provider.rs  semantic.rs
src/ai/providers/: claude.rs  mod.rs  ollama.rs  openai.rs
src/cli/: ai.rs  check.rs  completions.rs  daily.rs  graph.rs  index.rs  init.rs  mcp.rs  mod.rs  query.rs  search.rs  status.rs
src/core/: ignore.rs  index.rs  link_resolver.rs  mod.rs  parser.rs  query.rs  vault.rs
src/db/: queries.rs  schema.rs
src/output/: json.rs  table.rs
tests/: test_integration.rs  test_link_resolver.rs  test_parser.rs  test_phase2.rs  test_phase3.rs  test_phase4_5.rs
tests/fixtures/basic_vault/: ambiguous-note.md  no-frontmatter.md  orphan-note.md
tests/fixtures/basic_vault/notes/: api-design.md  auth-middleware.md  error-handling.md
tests/fixtures/basic_vault/subfolder/: ambiguous-note.md  subfolder-note.md
